--- a/Front-End/PC Builder Home(UpdatedSlideshow)/style.css
+++ b/Front-End/PC Builder Home(UpdatedSlideshow)/style.css
@@ -1,3 +1,11 @@
+.horizontal-line {
+  width:65%;
+  border-top: 1px solid #080000;
+  border-bottom: 1px solid #0f0101;
+  margin-left: auto;
+    margin-right: auto;
+}
+
 html {
 	-webkit-font-smoothing: antialiased!important;
 	-moz-osx-font-smoothing: grayscale!important;
@@ -18,7 +26,7 @@ body {
 .md-stepper-horizontal .md-step {
 	display:table-cell;
 	position:relative;
-	padding:24px;
+	padding:50px;
 }
 .md-stepper-horizontal .md-step:hover,
 .md-stepper-horizontal .md-step:active {
@@ -110,7 +118,7 @@ body {
 .md-stepper-horizontal .md-step .md-step-bar-left,
 .md-stepper-horizontal .md-step .md-step-bar-right {
 	position:absolute;
-	top:36px;
+	top:63px;
 	height:1px;
 	border-top:1px solid #DDDDDD;
 }
