--- a/assets/css/adminstyle.css
+++ b/assets/css/adminstyle.css
@@ -1,6 +1,6 @@
 body{
     background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)),
-    url("PC background.jpg") center/cover no-repeat fixed;
+    url("../../public/PC_Background.jpg") center/cover no-repeat fixed;
     justify-content: stretch;
     font-family: 'Poppins', sans-serif;
 }
@@ -27,3 +27,4 @@ main {
     color: #fff;
 }
 /* ---------Table Style End-------- */
+
