--- a/assets/css/header_style.css
+++ b/assets/css/header_style.css
@@ -142,7 +142,7 @@ h2{
 }
 body{
   background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)),
-  url("../../public/PCT_Background.jpg") center/cover no-repeat fixed;
+  url("../../public/PC_Background.jpg") center/cover no-repeat fixed;
   justify-content: stretch;
   font-family: 'Poppins', sans-serif;
 }
@@ -7965,13 +7965,39 @@ html {
   }
 }
 
-.footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #2c3e50;
+/* ---------Footer Style Start------------- */
+footer {
   color: #fff;
+  background-color: #212529;
+  font-size: larger;
+}
+footer h1 {
+  letter-spacing: 2px;
+  font-weight: bolder;
 }
 
+footer ul {
+  list-style-type: none;
+  line-height: 2rem;
+}
+footer ul li a{
+  text-decoration: none;
+  color: #fff;
+}
+footer ul li a:hover{
+  color: #fff;
+  opacity: .5;
+}
+
+footer i {
+  margin-right: 1.5rem;
+  font-size: 2rem;
+  color: #fff;
+}
+footer i:hover {
+  opacity: .5;
+}
+/* ---------Footer Style End------------- */
 .copyright {
   background-color: #1a252f;
 }
