--- a/assets/css/prevcss.css
+++ b/assets/css/prevcss.css
@@ -1,28 +1,3 @@
-body{
-  padding: 0px 0px 0px 0px;
-  font-weight: 100;
- justify-content: stretch;
- font-family: 'Poppins', sans-serif;
- margin: 0;
- font-family: var(--bs-body-font-family);
- font-size: var(--bs-body-font-size);
- font-weight: var(--bs-body-font-weight);
- line-height: var(--bs-body-line-height);
- color: var(--bs-body-color);
- text-align: var(--bs-body-text-align);
- background-color: var(--bs-body-bg);
- -webkit-text-size-adjust: 100%;
- -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  
- 
-background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)),
-url("../../public/PC_Background.jpg") center/cover no-repeat fixed;
-justify-content: stretch;
-font-family: 'Open Sans', sans-serif;
-font-size:16px;
-color:#555555; 
-
-}
 .horizontal-line {
   width:65%;
   border-top: 1px solid #080000;
@@ -36,7 +11,11 @@ html {
 	-moz-osx-font-smoothing: grayscale!important;
 	-ms-font-smoothing: antialiased!important;
 }
-
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size:16px;
+  color:#555555; 
+}
 .md-stepper-horizontal {
 	display:table;
 	width:100%;
@@ -161,7 +140,12 @@ h2{
   text-shadow: 2px 2px 8px #FF0000;
   font-family: 'Courier New', monospace;
 }
-
+body{
+  background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)),
+  url("../../public/PC_Background.jpg") center/cover no-repeat fixed;
+  justify-content: stretch;
+  font-family: 'Poppins', sans-serif;
+}
 
 :root {
   
@@ -227,7 +211,18 @@ h2{
 }
 
 /* navbar */
-
+body {
+  margin: 0;
+  font-family: var(--bs-body-font-family);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-body-color);
+  text-align: var(--bs-body-text-align);
+  background-color: var(--bs-body-bg);
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 
 /* FONT NEW RELEASE AND FEATURED*/
@@ -1365,267 +1360,353 @@ footer i:hover {
   background-color: #1a252f;
 }
 
-h1{
-  color: #ffffff;
-  font-family: 'Courier New', monospace;
+
+/* --------- ABOUT STYLES ----------*/
+
+.container {
+  color: #fff;
 }
 
-p{
-  color: #ffffff;
-  font-family: 'Courier New', monospace;
+.about-title p {
+  letter-spacing: 6px;
 }
 
+.about-desc p {
+  letter-spacing: 2px;
+}
 
+.about-members p {
+  letter-spacing: 3px;
+}
+
+/* --------- ABOUT STYLES END ----------*/
+
+/* --------- FAQ STYLES ----------*/
+
+.accordion-item button {
+  color: #fff;
+  letter-spacing: .5em;
+  font-weight: bold;
+}
+
+.links a i {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.links a i:hover {
+  font-size: 2rem;
+  color: #43332c;
+}
+/* --------- FAQ STYLES END ----------*/
+
+/* ------------- CART STYLES ------------*/
 .product-image {
-  float: left;
-  width: 20%;
-}
-
-.product-details {
-  color: #ffffff;
-  float: left;
-  width: 37%;
-}
-
-.product-price {
-  color: #ffffff;
-  float: left;
-  width: 12%;
-}
-
-.product-quantity {
-  color: #ffffff;
-  float: left;
-  width: 10%;
-}
-
-.product-removal {
-  float: left;
-  width: 9%;
-}
-
-.product-line-price {
-  color: #ffffff;
-  float: left;
-  width: 12%;
-  text-align: right;
-}
-
-/* This is used as the traditional .clearfix class */
-.group:before, .shopping-cart:before,
-.column-labels:before,
-.product:before,
-.totals-item:before,
-.group:after,
-.shopping-cart:after,
-.column-labels:after,
-.product:after,
-.totals-item:after {
-  content: "";
-  display: table;
-}
-
-.group:after, .shopping-cart:after,
-.column-labels:after,
-.product:after,
-.totals-item:after {
-  clear: both;
-}
-
-.group, .shopping-cart,
-.column-labels,
-.product,
-.totals-item {
-  zoom: 1;
-}
-
-/* Apply clearfix in a few places */
-/* Apply dollar signs */
-.product .product-price:before,
-.product .product-line-price:before,
-.totals-value:before {
-  content: "$";
-}
-
-
-/* Body/Header stuff */
-
-
-h1 {
-  font-weight: 100;
-}
-
-label {
-  color: #aaa;
-}
-
-.shopping-cart {
-  margin-top: -45px;
-}
-
-/* Column headers */
-.column-labels label {
-  padding-bottom: 15px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid #eee;
-}
-.column-labels .product-image,
-.column-labels .product-details,
-.column-labels .product-removal {
-  text-indent: -9999px;
-}
-
-/* Product entries */
-.product {
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-.product .product-image {
-  text-align: center;
-}
-.product .product-image img {
-  width: 100px;
-}
-.product .product-details .product-title {
-  margin-right: 20px;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-}
-.product .product-details .product-description {
-  margin: 5px 20px 5px 0;
-  line-height: 1.4em;
-}
-.product .product-quantity input {
-  width: 40px;
-}
-.product .remove-product {
-  border: 0;
-  padding: 4px 8px;
-  background-color: #c66;
-  color: #fff;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-  font-size: 12px;
-  border-radius: 3px;
-}
-.product .remove-product:hover {
-  background-color: #a44;
-}
-
-/* Totals section */
-.totals .totals-item {
-  color: #ffffff;
-  float: right;
-  clear: both;
-  width: 100%;
-  margin-bottom: 10px;
-}
-.totals .totals-item label {
-  color: #ffffff;
-  float: left;
-  clear: both;
-  width: 79%;
-  text-align: right;
-}
-.totals .totals-item .totals-value {
-  color: #ffffff;
-  float: right;
-  width: 21%;
-  text-align: right;
-}
-.totals .totals-item-total {
-  color: #ffffff;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-}
-
-.checkout {
-  float: right;
-  border: 0;
-  margin-top: 20px;
-  padding: 6px 25px;
-  background-color: #6b6;
-  color: #fff;
-  font-size: 25px;
-  border-radius: 3px;
-}
-
-.checkout:hover {
-  background-color: #494;
-}
-
-/* Make adjustments for tablet */
-@media screen and (max-width: 650px) {
-  .shopping-cart {
-    margin: 0;
-    padding-top: 20px;
-    border-top: 1px solid #eee;
+    float: left;
+    width: 20%;
   }
-
-  .column-labels {
-    display: none;
-  }
-
-  .product-image {
-    float: right;
-    width: auto;
-  }
-  .product-image img {
-    margin: 0 0 10px 10px;
-  }
-
+  
   .product-details {
-    float: none;
-    margin-bottom: 10px;
-    width: auto;
+    color: #ffffff;
+    float: left;
+    width: 37%;
   }
-
+  
   .product-price {
-    clear: both;
-    width: 70px;
+    color: #ffffff;
+    float: left;
+    width: 12%;
   }
-
+  
   .product-quantity {
+    color: #ffffff;
+    float: left;
+    width: 10%;
+  }
+  
+  .product-removal {
+    float: left;
+    width: 9%;
+  }
+  
+  .product-line-price {
+    color: #ffffff;
+    float: left;
+    width: 12%;
+    text-align: right;
+  }
+  
+  /* This is used as the traditional .clearfix class */
+  .group:before, .shopping-cart:before,
+  .column-labels:before,
+  .product:before,
+  .totals-item:before,
+  .group:after,
+  .shopping-cart:after,
+  .column-labels:after,
+  .product:after,
+  .totals-item:after {
+    content: "";
+    display: table;
+  }
+  
+  .group:after, .shopping-cart:after,
+  .column-labels:after,
+  .product:after,
+  .totals-item:after {
+    clear: both;
+  }
+  
+  .group, .shopping-cart,
+  .column-labels,
+  .product,
+  .totals-item {
+    zoom: 1;
+  }
+  
+  /* Apply clearfix in a few places */
+  /* Apply dollar signs */
+  .product .product-price:before,
+  .product .product-line-price:before,
+  .totals-value:before {
+    content: "$";
+  }
+  
+  
+  /* Body/Header stuff */
+  body {
+    padding: 0px 30px 30px 20px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+  }
+  
+  h1 {
+    font-weight: 100;
+  }
+  
+  label {
+    color: #aaa;
+  }
+  
+  .shopping-cart {
+    margin-top: -45px;
+  }
+  
+  /* Column headers */
+  .column-labels label {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+  }
+  .column-labels .product-image,
+  .column-labels .product-details,
+  .column-labels .product-removal {
+    text-indent: -9999px;
+  }
+  
+  /* Product entries */
+  .product {
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+  }
+  .product .product-image {
+    text-align: center;
+  }
+  .product .product-image img {
     width: 100px;
   }
-  .product-quantity input {
-    margin-left: 20px;
+  .product .product-details .product-title {
+    margin-right: 20px;
+    font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
   }
-
-  .product-quantity:before {
-    content: "x";
+  .product .product-details .product-description {
+    margin: 5px 20px 5px 0;
+    line-height: 1.4em;
   }
-
-  .product-removal {
-    width: auto;
+  .product .product-quantity input {
+    width: 40px;
   }
-
-  .product-line-price {
+  .product .remove-product {
+    border: 0;
+    padding: 4px 8px;
+    background-color: #c66;
+    color: #fff;
+    font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
+    font-size: 12px;
+    border-radius: 3px;
+  }
+  .product .remove-product:hover {
+    background-color: #a44;
+  }
+  
+  /* Totals section */
+  .totals .totals-item {
+    color: #ffffff;
     float: right;
-    width: 70px;
+    clear: both;
+    width: 100%;
+    margin-bottom: 10px;
   }
-}
-/* Make more adjustments for phone */
-@media screen and (max-width: 350px) {
-  .product-removal {
-    float: right;
-  }
-
-  .product-line-price {
-    float: right;
-    clear: left;
-    width: auto;
-    margin-top: 10px;
-  }
-
-  .product .product-line-price:before {
-    content: "Item Total: $";
-  }
-
   .totals .totals-item label {
-    width: 60%;
+    color: #ffffff;
+    float: left;
+    clear: both;
+    width: 79%;
+    text-align: right;
   }
   .totals .totals-item .totals-value {
-    width: 40%;
+    color: #ffffff;
+    float: right;
+    width: 21%;
+    text-align: right;
   }
+  .totals .totals-item-total {
+    color: #ffffff;
+    font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
+  }
+  
+  .checkout {
+    float: right;
+    border: 0;
+    margin-top: 20px;
+    padding: 6px 25px;
+    background-color: #6b6;
+    color: #fff;
+    font-size: 25px;
+    border-radius: 3px;
+  }
+  
+  .checkout:hover {
+    background-color: #494;
+  }
+  
+  /* Make adjustments for tablet */
+  @media screen and (max-width: 650px) {
+    .shopping-cart {
+      margin: 0;
+      padding-top: 20px;
+      border-top: 1px solid #eee;
+    }
+  
+    .column-labels {
+      display: none;
+    }
+  
+    .product-image {
+      float: right;
+      width: auto;
+    }
+    .product-image img {
+      margin: 0 0 10px 10px;
+    }
+  
+    .product-details {
+      float: none;
+      margin-bottom: 10px;
+      width: auto;
+    }
+  
+    .product-price {
+      clear: both;
+      width: 70px;
+    }
+  
+    .product-quantity {
+      width: 100px;
+    }
+    .product-quantity input {
+      margin-left: 20px;
+    }
+  
+    .product-quantity:before {
+      content: "x";
+    }
+  
+    .product-removal {
+      width: auto;
+    }
+  
+    .product-line-price {
+      float: right;
+      width: 70px;
+    }
+  }
+  /* Make more adjustments for phone */
+  @media screen and (max-width: 350px) {
+    .product-removal {
+      float: right;
+    }
+  
+    .product-line-price {
+      float: right;
+      clear: left;
+      width: auto;
+      margin-top: 10px;
+    }
+  
+    .product .product-line-price:before {
+      content: "Item Total: $";
+    }
+  
+    .totals .totals-item label {
+      width: 60%;
+    }
+    .totals .totals-item .totals-value {
+      width: 40%;
+    }
+  }
+
+  /*----------- Orders Style ----------*/
+.table > thead > tr th:first-of-type,
+.table > tbody > tr th:first-of-type,
+.table > thead > tr td:first-of-type,
+.table > tbody > tr td:first-of-type {
+  padding-left: 0;
+}
+.table > thead > tr th:last-of-type,
+.table > tbody > tr th:last-of-type,
+.table > thead > tr td:last-of-type,
+.table > tbody > tr td:last-of-type {
+  padding-right: 0;
+}
+.table-sortable > thead > tr .header > span {
+  cursor: pointer;
+  display: inline-block;
+  padding-right: 16px;
+  padding-left: 0;
+}
+.table-sortable > thead > tr .header.text-right > span {
+  padding-left: 16px;
+  padding-right: 0;
+}
+.table-sortable > thead > tr .headerSortUp > span,
+.table-sortable > thead > tr .headerSortDown > span {
+  position: relative;
+}
+.table-sortable > thead > tr .headerSortUp > span:before,
+.table-sortable > thead > tr .headerSortDown > span:before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 0;
+  width: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid blue;
+  right: 0;
+  bottom: 6px;
+}
+.table-sortable > thead > tr .headerSortUp.text-right > span,
+.table-sortable > thead > tr .headerSortDown.text-right > span {
+  padding-right: 16px;
+  padding-left: 0;
+}
+.table-sortable > thead > tr .headerSortDown > span:before {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid blue;
+  border-bottom: none;
 }
 
-
+/*--------- Orders Style End ----------*/
