--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,60 +1,42 @@
-.profile{
-    margin: 25px 90px 10px 90px;
+*{
+    list-style: none;
 }
-.row1{
-    background-color: rgb(138,127,128,0.6);
-    height: 400px;
-    margin-bottom: 20px;
-    border-radius: 15px;
-}
-.row1 h1{
-    font-size: 25px;
-    padding-top: 20px;
-    margin-left: 20px;
-}
-.row1 p:hover{
-    color: black;
-}
-.row2{
-    background-color: rgb(138,127,128,0.6);
-    height: 180px;
-    border-radius: 15px;
+body{
+    background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)),
+    url("../../public/PC_Background.jpg") center/cover no-repeat fixed;
+    justify-content: stretch;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container2{
-    background-color: rgb(138,127,128,0.6);
-    display: flex;
-    justify-content:space-between;
-    height: 600px;
-    border-radius: 15px;
+.container {
+    color: #fff;
 }
-.container2 h1{
-    margin-top: 15px;
+
+/* ----index css start------ */
+.leftbox a{
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-size: 1rem;
+    color: #fff;
 }
-.container2 p{
-    margin-left: 25px;
+
+.leftbox a:hover{
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: bold;
+    transform: scale(1.1);
+    transition: 0.5s;
 }
-.user-image{
-    background-color: lightgrey;
-    height: 110px;
-    width: 110px;
-    margin-right:60px;
-    margin-top: 50px;
+/* ----index css End------ */
+
+
+/* ----edit css start------ */
+form input {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
 }
-.container3{
-    background-color: rgb(138,127,128,0.6);
-    height: 600px;
-    border-radius: 15px;
-}
-h1{
-    font-family: 'Poppins', sans-serif;
-    margin-left: 15px;  
-    color: white;
-}
-p{
-    font-family: 'Poppins', sans-serif;
-    color: white;
-}
-li p{
-    margin-bottom: 1px;
-}
+/* ----Edit css End------ */
