--- a/Team3/assets/css/header_style.css
+++ b/Team3/assets/css/header_style.css
@@ -1471,7 +1471,7 @@ p{
 .product .product-price:before,
 .product .product-line-price:before,
 .totals-value:before {
-  content: "$";
+  content: "";
 }
 
 
@@ -1523,7 +1523,7 @@ label {
   line-height: 1.4em;
 }
 .product .product-quantity input {
-  width: 40px;
+  width: 70px;
 }
 .product .remove-product {
   border: 0;
