added status, ui fix

--- a/assets/css/header_style.css
+++ b/assets/css/header_style.css
@@ -1638,7 +1638,7 @@ label {
   }
 
   .product .product-line-price:before {
-    content: "Item Total: $";
+    content: "Item Total: ₱";
   }
 
   .totals .totals-item label {
